# FlameFrame

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  clippy.toml  deny.toml  install.ps1  install.sh  notes.md  rustfmt.toml  vision.md
.github/workflows/: ci.yml  release.yml
agents/pi/: flameframe.ts
src/: agent.rs  cli.rs  context.rs  diagnostics.rs  ffmpeg.rs  main.rs  manual.rs  pipeline.rs  uninstall.rs  upgrade.rs  workspace.rs  ytdlp.rs
tests/: cli_smoke.rs
