[package]
name = "flameframe"
version = "0.1.1"
edition = "2024"
rust-version = "1.86"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AndrewPBerg/FlameFrame"
description = "Local-first video-to-context compiler for AI agents"
default-run = "flameframe"

[[bin]]
name = "flameframe"
path = "src/main.rs"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_debug_implementations = "warn"
static_mut_refs = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
unimplemented = "warn"
absolute_paths = "deny"
cognitive_complexity = "warn"
disallowed_macros = "deny"
must_use_candidate = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
missing_docs_in_private_items = "allow"
doc_markdown = "allow"
return_self_not_must_use = "allow"
items_after_statements = "allow"
similar_names = "allow"
doc_lazy_continuation = "allow"
needless_raw_string_hashes = "allow"
too_many_lines = "allow"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
